--- a/style.css
+++ b/style.css
@@ -118,7 +118,75 @@
     padding-top: 42px;
 }
 
+.our__daily__life__product{
+    background-color: rgb(244, 242, 238);
+    width: 50%;
+    padding: 10px;
+}
+.our__daily__life__product__image{
+    display: flex;
+    justify-content: center;
+}
+.cart__button__and__love{
+    display: flex;
+    justify-content: space-between;
+}
+.add__to__cart__button{
+    padding:8px;
+    border-radius: 16px;
+    border: none;
+    display: flex;
+    gap:10px;
+    color: rgb(17, 17, 17) ;
+    background-color: rgb(255, 255, 255);
+}
+.cart__button__and__love img{
+    background-color:rgb(255, 255, 255) ;
+}
+.our__daily__life__product__footer__content{
+    display: flex;
+    justify-content: space-between;
+}
+.our__daily__life__product__footer__content h4{
+    font-size: 24px;
+}
+.our__daily__life__product__footer__content h5{
+    font-size: 18px;
+}
+.our-daily-life-product__serum{
+    background-color:rgb(244, 242, 238); 
+    padding: 10px;
+    width: 50vh;
+    height: 90%;
+}
+.our__daily__life__product_section{
+    display: flex;
+    gap:20px;
+}
+.our__daily__life__product__image_cart__content{
+  display: flex;
+  gap: 20px;
+}
+.active {
+    width: 100%;
+    height: 2px;
+    background-color: #dfdfdf;
+    margin-top: 1rem;
 
+}
+.divider {
+    width: 90%;
+    height: 2px;
+    background-color: #dfdfdf;
+    margin-top: 1rem;
+   
+}
+
+.divider div {
+    width: 30%;
+    height: 2px;
+    background-color: black;
+}
 @media (max-width: 480px) {
     .nav__link {
         display: none;
