--- a/style.css
+++ b/style.css
@@ -9,3 +9,94 @@
     margin: 0 auto;
 }
 /* nav__bar */
+.nav__bar {
+    display: flex;
+    justify-content: space-between;
+}
+.nav__link {
+    display: flex;
+    list-style: none;
+    gap: 10px;
+    color: rgb(77, 77, 77);
+    font-size: 18px;
+    cursor: pointer;
+}
+.nav__bar h2 {
+    color: rgb(17, 17, 17);
+    font-size: 32px;
+    cursor: pointer;
+}
+.nav__user__link {
+    display: flex;
+    gap: 20px;
+    align-items: center;
+}
+.nav__user__link img {
+    height: 28px;
+    cursor: pointer;
+}
+.nav__user__link button {
+    display: flex;
+    margin: 10px 0px;
+    gap: 86px;
+    border-radius: 18px;
+    font-size: 14px;
+    border: none;
+    color: rgb(187, 187, 187);
+}
+.user__bar {
+    font-size: 36px;
+    display: none;
+}
+/* Small Mobile (480px and below) */
+@media (max-width: 480px) {
+    .nav__link {
+        display: none;
+    }
+    .nav__user__link {
+        display: none;
+    }
+    .user__bar {
+        font-size: 36px;
+        display: block;
+    }
+}
+/* Mobile (up to 600px) */
+@media (min-width: 480px) and (max-width: 600px) {
+    .nav__link {
+        display: none;
+    }
+    .nav__user__link {
+        display: none;
+    }
+    .user__bar {
+        font-size: 36px;
+        display: block;
+    }
+}
+/* tablet */
+@media (min-width: 600px) and (max-width: 768px) {
+    .nav__link {
+        display: none;
+    }
+    .nav__user__link {
+        display: none;
+    }
+    .user__bar {
+        font-size: 36px;
+        display: block;
+    }
+}
+/* Small Desktop (768px to 1024px) */
+@media (min-width: 768px) and (max-width: 1024px) {
+    .nav__link {
+        display: none;
+    }
+    .nav__user__link {
+        display: none;
+    }
+    .user__bar {
+        font-size: 36px;
+        display: block;
+    }
+}
