--- a/style.css
+++ b/style.css
@@ -261,6 +261,14 @@ color: #696969;
     .product__range__contant__image__position__2nd{
         transform: translateX(0px);
     }
+    .best__product{
+       flex-direction: column;
+       justify-content: center;
+       align-items: center;
+    }
+    .product__item{
+        width: 90%;
+    }
 }
 /* Mobile (up to 600px) */
 @media (min-width: 480px) and (max-width: 600px) {
@@ -313,8 +321,14 @@ color: #696969;
     .product__range__contant__image__position__2nd{
         transform: translateX(0px);
     }
-
-   
+    .best__product{
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+     }
+     .product__item{
+         width: 90%;
+     }
 }
 /* tablet */
 @media (min-width: 600px) and (max-width: 768px) {
@@ -367,7 +381,14 @@ color: #696969;
     .product__range__contant__image__position__2nd{
         transform: translateX(0px);
     }
-    
+    .best__product{
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+     }
+     .product__item{
+         width: 90%;
+     }
 }
 /* Small Desktop (768px to 1024px) */
 @media (min-width: 768px) and (max-width: 1024px) {
@@ -420,4 +441,12 @@ color: #696969;
     .product__range__contant__image__position__2nd{
         transform: translateX(0px);
     }
+    .best__product{
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+     }
+     .product__item{
+         width: 90%;
+     }
 }
