--- a/style.css
+++ b/style.css
@@ -242,57 +242,58 @@
     color: #575757;
     text-align: center;
 }
-.skin__care__routine__hero__section div{
+.skin__care__routine__hero__section div {
     display: flex;
     flex-direction: column;
-    gap:10px;
+    gap: 10px;
 }
-.skin__care__routine__hero__section__image__position__down{
+.skin__care__routine__hero__section__image__position__down {
     transform: translateY(100px);
 }
-.skin__care__routine__hero__section__image__position__up{
+.skin__care__routine__hero__section__image__position__up {
     transform: translateY(-100px);
 }
 /* Success Stories from Our Clients ! */
-.success__stories__hero__section{
+.success__stories__hero__section {
     display: flex;
-    gap:30px;
+    gap: 30px;
     justify-content: center;
     margin-top: 100px;
     margin-bottom: 100px;
 }
-.success__stories__header_section{
+.success__stories__header_section {
     display: flex;
     flex-direction: column;
-    gap:10px;
+    gap: 10px;
     text-align: center;
     margin-top: 200px;
 }
-.success__stories__header_section h5{
+.success__stories__header_section h5 {
     font-size: 52px;
     color: #111111;
 }
-.success__stories__header_section p{
+.success__stories__header_section p {
     font-size: 18px;
     color: #696969;
 }
-.footer__social{
+/* footer */
+.footer__social {
     margin-top: 50px;
 }
-.footer__content{
+.footer__content {
     display: flex;
     justify-content: space-between;
     padding: 100px 0px 100px 0px;
 }
-.your__information{
+.your__information {
     display: flex;
     flex-direction: column;
 }
-.your__information h6{
-    color: #FFFFFF;
+.your__information h6 {
+    color: #ffffff;
     font-size: 18px;
 }
-.email{
+.email {
     margin-top: 10px;
     margin: 10px 0px;
     padding: 8px;
@@ -300,34 +301,34 @@
     border-radius: 8px;
     border: none;
 }
-.subscribe{
+.subscribe {
     margin: 10px 0px;
     padding: 8px;
     color: #000000;
-    background-color:#FFFFFF ;
+    background-color: #ffffff;
     border-radius: 8px;
     border: none;
 }
-.footer__content__text{
+.footer__content__text {
     display: flex;
     flex-direction: column;
-    gap:10px;
+    gap: 10px;
     font-size: 18px;
-    color: #FFFFFF;
+    color: #ffffff;
 }
-.footer__content__text h6{
+.footer__content__text h6 {
     font-size: 18px;
-    color: #FFFFFF;
+    color: #ffffff;
 }
-.footer__section{
+.footer__section {
     background-color: #000000;
 }
-.footer__social__text{
-    color: #FFFFFF;
+.footer__social__text {
+    color: #ffffff;
 }
-.footer__social__text h5{
-  font-size: 18px;
-  margin-bottom: 10px;
+.footer__social__text h5 {
+    font-size: 18px;
+    margin-bottom: 10px;
 }
 /* Small Mobile (480px and below) */
 @media (max-width: 480px) {
@@ -391,26 +392,26 @@
     .skin__care__routine__hero__section {
         flex-direction: column;
     }
-    .skin__care__routine__hero__section__image__position__down{
+    .skin__care__routine__hero__section__image__position__down {
         transform: translateY(0px);
     }
-    .skin__care__routine__hero__section__image__position__up{
+    .skin__care__routine__hero__section__image__position__up {
         transform: translateY(0px);
     }
-    .skin__care__routine__hero__section { 
+    .skin__care__routine__hero__section {
         margin-top: 10px;
     }
-    .success__stories__hero__section{
+    .success__stories__hero__section {
         flex-direction: column;
     }
-    .success__stories__header_section{   
+    .success__stories__header_section {
         margin-top: 100px;
     }
-    .footer__content{
+    .footer__content {
         flex-direction: column;
-        gap:30px;
+        gap: 30px;
     }
-    .your__information{
+    .your__information {
         display: none;
     }
 }
@@ -476,26 +477,26 @@
     .skin__care__routine__hero__section {
         flex-direction: column;
     }
-    .skin__care__routine__hero__section__image__position__down{
+    .skin__care__routine__hero__section__image__position__down {
         transform: translateY(0px);
     }
-    .skin__care__routine__hero__section__image__position__up{
+    .skin__care__routine__hero__section__image__position__up {
         transform: translateY(0px);
     }
-    .skin__care__routine__hero__section { 
+    .skin__care__routine__hero__section {
         margin-top: 10px;
     }
-    .success__stories__hero__section{
+    .success__stories__hero__section {
         flex-direction: column;
     }
-    .success__stories__header_section{   
+    .success__stories__header_section {
         margin-top: 100px;
     }
-    .footer__content{
+    .footer__content {
         flex-direction: column;
-        gap:30px;
+        gap: 30px;
     }
-    .your__information{
+    .your__information {
         display: none;
     }
 }
@@ -561,22 +562,22 @@
     .skin__care__routine__hero__section {
         flex-direction: column;
     }
-    .skin__care__routine__hero__section__image__position__down{
+    .skin__care__routine__hero__section__image__position__down {
         transform: translateY(0px);
     }
-    .skin__care__routine__hero__section__image__position__up{
+    .skin__care__routine__hero__section__image__position__up {
         transform: translateY(0px);
     }
-    .skin__care__routine__hero__section { 
+    .skin__care__routine__hero__section {
         margin-top: 10px;
     }
-    .success__stories__hero__section{
+    .success__stories__hero__section {
         flex-direction: column;
     }
-    .success__stories__header_section{   
+    .success__stories__header_section {
         margin-top: 100px;
     }
-    .footer__content__text{
+    .footer__content__text {
         display: none;
     }
 }
@@ -642,26 +643,26 @@
     .skin__care__routine__hero__section {
         flex-direction: column;
     }
-    .skin__care__routine__hero__section__image__position__down{
+    .skin__care__routine__hero__section__image__position__down {
         transform: translateY(0px);
     }
-    .skin__care__routine__hero__section__image__position__up{
+    .skin__care__routine__hero__section__image__position__up {
         transform: translateY(0px);
     }
-    .skin__care__routine__hero__section { 
+    .skin__care__routine__hero__section {
         margin-top: 10px;
     }
-    .success__stories__hero__section{
+    .success__stories__hero__section {
         flex-direction: column;
     }
-    .success__stories__header_section{   
+    .success__stories__header_section {
         margin-top: 100px;
     }
-    .footer__content{
-        gap:250px;
+    .footer__content {
+        gap: 250px;
         justify-content: center;
-    }   
-    .footer__content__text{
+    }
+    .footer__content__text {
         display: none;
     }
 }
